syntax = "proto3";

import "open/OpenTradingHallEntity.proto";
import "open/OpenFinancingSideEntity.proto";
import "open/OpenCapitalSideEntity.proto";
import "BaseRestEntity.proto";
package fin.open;
option java_multiple_files = true;
option java_package = "com.usoft.fin.external.open.api.protobuf";
option java_outer_classname = "IOpenTradingHallServiceProto";

service IOpenTradingHallService {
    // 获取融资方列表-restAPI /api/open/factoring/financeSides, method:get, type:kv
    rpc getFinanceSides (GetFinanceSidesReq) returns (GetFinanceSidesResp);
    //根据验订单ID通过b2b获取订单详情 -restAPI  /api/open/factoring/getOrderByOrderId   method:get, type:kv
    rpc getOrderByOrderId (GetOrderByOrderIdReq) returns (GetOrderByOrderIdResp);
    //根据验收单主表ID通过b2b获取验收单详情 -restAPI /api/open/factoring/getAcceptOrderByAcceptId   method:get, type:kv
    rpc getAcceptOrderByAcceptId (GetAcceptOrderByAcceptIdReq) returns (GetAcceptOrderByAcceptIdResp);
    // 通过enuu获取融资方信息-restAPI /api/open/factoring/baseInfo, method:get, type:kv
    rpc getBaseInfo (GetBaseInfoReq) returns (GetBaseInfoResp);
    // 获取放款信息记录、还款计划记录公共方法-restAPI /api/open/factoring/getCapitalSideLoanAndRepaymentPlan, method:get, type:kv
    rpc getCapitalSideLoanAndRepaymentPlan (GetCapitalSideLoanAndRepaymentPlanReq) returns (GetCapitalSideLoanAndRepaymentPlanResp);
    // 保理大厅详情获取企业扩展信息-restAPI /api/open/factring/getEnterpriseExtensionInfo, method:get, type:kv
    rpc getEnterpriseExtensionInfo (GetEnterpriseExtensionInfoReq) returns (GetEnterpriseExtensionInfoResp);
}

// 获取融资方列表--请求
message GetFinanceSidesReq {
    string signature = 1; //请求参数签名,（GET KV：K1=V2&K2=V2 ; POST JSON: {"K1":"V1","K2":"V2",signature:""}）
    string secretId = 2; //秘密身份ID
    int32 pageNumber = 3; // 页码
    int32 pageSize = 4; // 每页条数
    string grade = 5; // 平台评级
    double financeAmountStart = 6; // 融资金额
    double financeAmountEnd = 7; // 融资金额
    double minOfferRateStart = 8; // 最低报价利率
    double minOfferRateEnd = 9; // 最低报价利率
    double maxOfferRateStart = 10; // 最高报价利率
    double maxOfferRateEnd = 11; // 最高报价利率
}

// 获取融资方列表--响应
message GetFinanceSidesResp {
    RespHeader respHeader = 1; // 响应头信息
    repeated FinanceSideRestInfo financeSideRestInfo = 2;
    PagingInfo pagingInfo = 3; // 分页信息
}

//根据验订单ID通过b2b获取订单详情--请求
message GetOrderByOrderIdReq{
    string signature = 1; //请求参数签名,（GET KV：K1=V2&K2=V2 ; POST JSON: {"K1":"V1","K2":"V2",signature:""}）
    string secretId = 2; //秘密身份ID
    string orderCode = 3;  //订单code
}

//根据验订单ID通过b2b获取订单详情--响应
message GetOrderByOrderIdResp{
    RespHeader respHeader = 1; // 响应头信息
    OrderArg orderArg = 2;     //订单聚合实体
}

//根据验收单主表ID通过b2b获取验收单详情--请求
message GetAcceptOrderByAcceptIdReq{
    string signature = 1; //请求参数签名,（GET KV：K1=V2&K2=V2 ; POST JSON: {"K1":"V1","K2":"V2",signature:""}）
    string secretId = 2; //秘密身份ID
    string orderAcceptCode = 3;  //验收单code
}

//根据验收单主表ID通过b2b获取验收单详情--响应
message GetAcceptOrderByAcceptIdResp{
    RespHeader respHeader = 1; // 响应头信息
    OrderAcceptArg orderAcceptArg = 2;     //订单聚合实体
}

// 通过enuu获取融资方信息--请求
message GetBaseInfoReq {
    string signature = 1; //请求参数签名,（GET KV：K1=V2&K2=V2 ; POST JSON: {"K1":"V1","K2":"V2",signature:""}）
    string secretId = 2; //秘密身份ID
    int32 enuu = 3; //查询的企业uu
    int32 csEnuu = 4; //企业方企业uu
    int32 uu = 5; //个人uu
}

// 通过enuu获取融资方信息--响应
message GetBaseInfoResp {
    RespHeader respHeader = 1; // 响应头信息
    RestBaseInfo baseInfo = 2;
}

// 获取放款信息记录、还款计划记录公共方法--请求
message GetCapitalSideLoanAndRepaymentPlanReq {
    int32 enuu = 1; //查询的企业uu
    string code = 2; //融资需求编号
}

// 获取放款信息记录、还款计划记录公共方法--响应
message GetCapitalSideLoanAndRepaymentPlanResp {
    RespHeader respHeader = 1; // 响应头信息
    CapitalSideLoanAndRepaymentPlan capitalSideLoanAndRepaymentPlan = 2; //(资金方放款信息表)与(资金方还款计划表)
}

// 获取爬虫采集的企业扩展信息 请求参数
message GetEnterpriseExtensionInfoReq {
    int32 enuu = 1;
}

// 获取爬虫采集的企业扩展信息 响应参数
message GetEnterpriseExtensionInfoResp {
    RespHeader respHeader = 1; // 响应头信息
    CompanyBasicInfosByErmRest companyBasicInfo = 2;      //基础信息
    CompanyEnterpriseCrawlerListFinRest companyEnterpriseCrawlerList = 3; //企业信用数据
    ErpDataInfoRest erpDataInfo = 4;            //获取erp财务数据
    B2bDataInfoRest b2bDataInfo = 5;            //获取b2b近3年数据
    repeated CapitalSideLoan capitalSideLoan = 6;          //历史融资明细
}